on-prem/kube/devana/devana-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devana-api
  namespace: devana
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: devana-api
  template:
    metadata:
      labels:
        app: devana-api
    spec:
      containers:
        - name: devana-api
          resources:
            requests:
              cpu: "1"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "1Gi"
          image: registry.devana.ai/devana/back:latest
          ports:
            - containerPort: 4666
            - containerPort: 5001
          livenessProbe:
            httpGet:
              path: /health
              port: 4666
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
      imagePullSecrets:
        - name: devana-registry
---
apiVersion: v1
kind: Service
metadata:
  name: devana-api-service
  namespace: devana
spec:
  selector:
    app: devana-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4666
    - name: ws
      protocol: TCP
      port: 5001
      targetPort: 5001
