on-prem/kube/devana/devana-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devana-front
  namespace: devana
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: devana-front
  template:
    metadata:
      labels:
        app: devana-front
    spec:
      containers:
        - name: devana-front
          resources:
            requests:
              cpu: "0.4"
              memory: "512Mi"
            limits:
              cpu: "0.8"
              memory: "1024Mi"
          image: registry.devana.ai/devana/front:latest
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 5
      imagePullSecrets:
        - name: devana-registry
---
apiVersion: v1
kind: Service
metadata:
  name: devana-front-service
  namespace: devana
spec:
  selector:
    app: devana-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
