on-prem/kube/devana/devana-meilisearch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devana-meilisearch
  namespace: devana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devana-meilisearch
  template:
    metadata:
      labels:
        app: devana-meilisearch
    spec:
      containers:
        - name: devana-meilisearch
          resources:
            requests:
              cpu: "2"
              memory: "3Gi"
            limits:
              cpu: "2"
              memory: "3Gi"
          image: getmeili/meilisearch:v1.9
          ports:
            - containerPort: 7700
          volumeMounts:
            - name: meilisearch-volume
              mountPath: /meili_data
      volumes:
        - name: meilisearch-volume
          persistentVolumeClaim:
            claimName: meilisearch
      imagePullSecrets:
        - name: registry-secret-scriptor
---
apiVersion: v1
kind: Service
metadata:
  name: devana-meilisearch-service
  namespace: devana
spec:
  selector:
    app: devana-meilisearch
  ports:
    - protocol: TCP
      port: 7700
      targetPort: 7700
