on-prem/kube/devana/devana-odin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devana-odin
  namespace: devana
spec:
  replicas: 4
  selector:
    matchLabels:
      app: devana-odin
  template:
    metadata:
      labels:
        app: devana-odin
    spec:
      containers:
        # -------------------------
        # Gotenberg
        # -------------------------
        - name: gotenberg
          resources:
            requests:
              cpu: "1"
              memory: "256Mi"
            limits:
              cpu: "1.5"
              memory: "384Mi"
          image: gotenberg/gotenberg:8
          ports:
            - containerPort: 3000
        # -------------------------
        # Application principale
        # -------------------------
        - name: devana-odin
          resources:
            requests:
              cpu: "3"
              memory: "2.5Gi"
            limits:
              cpu: "4"
              memory: "3Gi"
          image: rg.fr-par.scw.cloud/scriptor/odin:latest
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: devana-odin-service
  namespace: devana
spec:
  selector:
    app: devana-odin
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
