on-prem/kube/devana/devana-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devana-postgres
  namespace: devana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devana-postgres
  template:
    metadata:
      labels:
        app: devana-postgres
    spec:
      containers:
        - name: postgres
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: devana-postgres-service
  namespace: devana
spec:
  selector:
    app: devana-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
