on-prem/kube/devana/devana-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-devana
  namespace: devana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devana-redis
  template:
    metadata:
      labels:
        app: devana-redis
    spec:
      containers:
        - name: redis
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          image: redis
          ports:
            - containerPort: 6379
          command: ["redis-server"]
          args:
            - "--requirepass"
            - "$(REDIS_PASSWORD)"
---
apiVersion: v1
kind: Service
metadata:
  name: devana-redis-service
  namespace: devana
spec:
  selector:
    app: devana-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
